<resources>
    <string name="app_name">21天综合训练</string>
    <string name="start_text1_first">Fitness</string>
    <string name="start_text1_second">改变从坚持健身开始</string>
    <string name="start_text2_first">Challenge</string>
    <string name="start_text2_second">挑战每一次不可能</string>
    <string name="start_text3_first">Action</string>
    <string name="start_text3_second">行动才有结果</string>
    <string name="register">注册</string>
    <string name="go_register">去注册</string>
    <string name="login">登录</string>
    <string name="improve_personal_info">完善个人信息</string>
    <string name="add_headimg">添加头像</string>
    <string name="impr_finish">完成进入</string>
    <string name="input_nick">请输入昵称</string>
    <string name="input_sex">请输入性别</string>
    <string name="input_birth">请输入生日</string>
    <string name="input_weight">请输入体重</string>
    <string name="input_height">请输入身高</string>
    <string name="select_height">身高选择</string>
    <string name="select_weight">体重选择</string>
    <string name="select_birth">生日选择</string>
    <string name="select_sex">性别选择</string>
    <string name="change_headimg">更换头像</string>
    <string name="base_info">基本信息</string>
    <string name="nick">昵称</string>
	<string-array name="sex">
	    <item >男</item>
     	<item >女</item>
    </string-array>
    <string name="birth">生日</string>
    <string name="city">城市</string>
	<string-array name="height">
	    <item >150</item>
	    <item >151</item>
	    <item >152</item>
	    <item >153</item>
	    <item >154</item>
	    <item >155</item>
	    <item >156</item>
	    <item >157</item>
	    <item >158</item>
	    <item >159</item>
	    <item >160</item>
	    <item >161</item>
	    <item >162</item>
	    <item >163</item>
	    <item >164</item>
	    <item >165</item>
	    <item >166</item>
	    <item >167</item>
	    <item >168</item>
	    <item >169</item>
	    <item >170</item>
	    <item >171</item>
	    <item >172</item>
	    <item >173</item>
	    <item >174</item>
	    <item >175</item>
	    <item >176</item>
	    <item >177</item>
	    <item >178</item>
	    <item >179</item>
	    <item >180</item>
	    <item >181</item>
	    <item >182</item>
	    <item >183</item>
	    <item >184</item>
	    <item >185</item>
	    <item >186</item>
	    <item >187</item>
	    <item >188</item>
	    <item >189</item>
	    <item >190</item>
	    <item >191</item>
	    <item >192</item>
	    <item >193</item>
	    <item >194</item>
	    <item >195</item>
	    <item >196</item>
	    <item >197</item>
	    <item >198</item>
	    <item >199</item>
	    <item >200</item>
	    <item >201</item>
	    <item >202</item>
	    <item >203</item>
	    <item >204</item>
	    <item >205</item>
	    <item >206</item>
	    <item >207</item>
	    <item >208</item>
	    <item >209</item>
	</string-array>
	<string-array name="weight">
	    <item >45</item>
	    <item >46</item>
	    <item >47</item>
	    <item >48</item>
	    <item >49</item>
	    <item >50</item>
	    <item >51</item>
	    <item >52</item>
	    <item >53</item>
	    <item >54</item>
	    <item >55</item>
	    <item >56</item>
	    <item >57</item>
	    <item >58</item>
	    <item >59</item>
	    <item >60</item>
	    <item >61</item>
	    <item >62</item>
	    <item >63</item>
	    <item >64</item>
	    <item >65</item>
	    <item >66</item>
	    <item >67</item>
	    <item >68</item>
	    <item >69</item>
	    <item >70</item>
	    <item >71</item>
	    <item >72</item>
	    <item >73</item>
	    <item >74</item>
	    <item >75</item>
	    <item >76</item>
	    <item >77</item>
	    <item >78</item>
	    <item >79</item>
	    <item >80</item>
	    <item >81</item>
	    <item >82</item>
	    <item >83</item>
	    <item >84</item>
	    <item >85</item>
	    <item >86</item>
	    <item >87</item>
	    <item >88</item>
	    <item >89</item>
	    <item >90</item>
	    <item >91</item>
	    <item >92</item>
	    <item >93</item>
	    <item >94</item>
	    <item >95</item>
	    <item >96</item>
	    <item >97</item>
	    <item >98</item>
	    <item >99</item>
	    <item >100</item>
	    <item >101</item>
	    <item >102</item>
	    <item >103</item>
	    <item >104</item>
	    <item >105</item>
	    <item >106</item>
	    <item >107</item>
	    <item >108</item>
	    <item >109</item>
	    <item >110</item>
	    <item >111</item>
	    <item >112</item>
	    <item >113</item>
	    <item >114</item>
	    <item >115</item>
	    <item >116</item>
	    <item >117</item>
	    <item >118</item>
	    <item >119</item>
	    <item >120</item>
	</string-array>
    <string name="bmi">BMI</string>
    <string name="health_index">健康指数</string>
    <string name="select_img">选择照片</string>
    <string name="camera">相机</string>
    <string name="album">相册</string>
    <string name="personal_info">个人信息</string>
    <string name="save">保存</string>
    <string name="age">岁</string>
    <string name="back">返回</string>
    <string name="join_in_teach">进入教学</string>
    <string name="recommend_train">推荐训练</string>
    <string name="train_group_num">训练组数</string>
    <string name="select_count">次数选择</string>
    <string name="select_tool_weight">重量选择</string>
    <string name="phone_num_empty">手机号码为空</string>
    <string name="phone_num_err">手机号码有误</string>
    <string name="get_identifycode_fail">获取验证码失败，请稍后再试</string>
    <string name="net_error">网络异常，请检查网络</string>
    <string name="this_phone_had_bonded">该手机已被绑定</string>
    <string name="this_account_had_exist">该账号已注册</string>
    <string name="this_account_not_exist">该账号不存在</string>
    <string name="register_fail">注册失败，请重新获取</string>
    <string name="get_verify_code_fail">获取验证码失败</string>
    <string name="verify_code_err">验证码错误</string>
    <string name="username_or_pwd_cant_empty">用户名或密码不能为空</string>
    <string name="username_not_identified">未认证用户</string>
    <string name="login_fail">登录失败</string>
    <string name="reset_pwd_fail">重置密码失败，请稍后再试</string>
    <string name="verify_code_timeout">验证码时间太长</string>
    <string name="please_wait">请稍后...</string>
    <string name="my_training">我的训练</string>
    <string name="all_course">全部课程</string>
    <string name="gym">综合训练器</string>
    <string name="training">训练</string>
    <string name="me">我</string>
    <string name="course_empty_text">改变从现在开始，赶快加入吧！</string>
    <string name="excellent_course">精品课程</string>
    <string name="recommended_courses">推荐课程</string>
    <string name="course_progress_ing">进行中</string>
    <string name="course_rest_day">休息日</string>
    <string name="course_finished">已完成</string>
    <string name="course_expired">已过期</string>
    <string name="today_is_rest_day">今天是休息日</string>
    <string name="trainnig_record">训练记录</string>
    <string name="join_train">加入训练</string>
    <string name="start_train">开始训练</string>
    <string name="train_detail">详细计划</string>
    <string name="exit_train">退出训练</string>
    <string name="rejoin_train">重新参加计划</string>
    <string name="current_day_train_content">当天训练内容</string>
    <string name="exit_train_or_not">是否确认要退出本课程</string>
    <string name="unfinish_train">您未完成本次训练，坚持才是胜利！</string>
    <string name="finish_train">恭喜您，完成训练！</string>
    <string name="this_mycourse_is_expired">该计划已过期</string>
    <string name="group_num_is_bigger_than_9">不能超过9组</string>
    <string name="group_num_is_smaller_than_1">不能小于1组</string>
    <string name="enter_phone_num">请输入您的手机号</string>
    <string name="enter_pwd">请输入登录密码</string>
	<string name="fogot_pwd">忘记密码？</string>
	<string name="enter_correct_phone_num">请输入正确的手机号</string>
	<string name="account_unregister">账号未注册</string>
	<string name="enter_verificationcode">请输入验证码</string>
	<string name="get_verificationcode">点击获取验证码</string>
	<string name="had_account">已有账号</string>
	<string name="register_finish">完成注册</string>
	<string name="enter_new_pwd">请输入新密码</string>
	<string name="reset_pwd">重置密码</string>
	<string name="input_have_empty">输入不能为空</string>
	<string name="reset_pwd_suc">重置密码成功</string>
	<string name="bluetooth">蓝牙</string>
	<string name="bt_had_paired">已适配</string>
	<string name="bt_connected">已连接</string>
	<string name="bt_disconnected">未连接</string>
	<string name="bt_cancel">取消绑定并连接新设备</string>
	<string name="yes">是</string>
	<string name="no">否</string>
	<string name="ask_unbind">是否解绑本设备</string>
	<string name="continue_train">继续训练</string>
	<string name="cancel">取消</string>
	<string name="confirm">确认</string>
	<string name="bt_all_devices">全部设备</string>
	<string name="bt_last_connected_no">无</string>
	<string name="ask_open_bt">是否为您开启蓝牙</string>
	<string name="new_version">新版本 V</string>
	<string-array name="month">
	    <item >1</item>
     	<item >2</item>
     	<item >3</item>
     	<item >4</item>
     	<item >5</item>
     	<item >6</item>
     	<item >7</item>
     	<item >8</item>
     	<item >9</item>
     	<item >10</item>
     	<item >11</item>
     	<item >12</item>
    </string-array>
	<string-array name="year">
	    <item >1970</item>
     	<item >1971</item>
     	<item >1972</item>
     	<item >1973</item>
     	<item >1974</item>
     	<item >1975</item>
     	<item >1976</item>
     	<item >1977</item>
     	<item >1978</item>
     	<item >1979</item>
     	<item >1980</item>
     	<item >1981</item>
     	<item >1982</item>
     	<item >1983</item>
     	<item >1984</item>
     	<item >1985</item>
     	<item >1986</item>
     	<item >1987</item>
     	<item >1988</item>
     	<item >1989</item>
     	<item >1990</item>
     	<item >1991</item>
     	<item >1992</item>
     	<item >1993</item>
     	<item >1994</item>
     	<item >1995</item>
     	<item >1996</item>
     	<item >1997</item>
     	<item >1998</item>
     	<item >1999</item>
     	<item >2000</item>
     	<item >2001</item>
     	<item >2002</item>
     	<item >2003</item>
     	<item >2004</item>
     	<item >2005</item>
     	<item >2006</item>
     	<item >2007</item>
     	<item >2008</item>
     	<item >2009</item>
     	<item >2010</item>
    </string-array>
	<string name="total">总</string>
	<string name="record_total_consume">您已累计训练消耗</string>
	<string name="kcal">kcal</string>
	<string name="record_total_time">累计时长</string>
	<string name="record_total_finish_days">累计完成</string>
	<string name="record_total_days">累计天数</string>
	<string name="record_total_train_count">共训练</string>
	<string name="hour">小时</string>
	<string name="count">次</string>
	<string name="day">天</string>
	<string name="record_total_equal">相当于消耗掉</string>
	<string name="difficult">难度</string>
	<string name="date">日期</string>
	<string name="group_num">组数</string>
	<string name="weight_tool">重量(kg)</string>
	<string name="burning_kcal">燃脂(kcal)</string>
	<string name="burning_train">训练量(kg)</string>
	<string name="detail_record">详细记录</string>
	<string name="account_personal_info">个人信息</string>
	<string name="account_feedback">用户反馈</string>
	<string name="account_about">关于</string>
	<string name="account_exit">退出</string>
	<string name="account_exit_or_not">您是否要退出本账号？</string>
	<string name="about">关于</string>
	<string name="email">邮箱</string>
	<string name="email_content">zhengshida@runrunfast.com</string>
	<string name="company_name">深圳21天健康科技有限公司</string>
	<string name="company_copyright">2016 All Rights Reserved</string>
	<string name="feedback">用户反馈</string>
	<string name="feedback_enter_question">您想要反馈的问题</string>
	<string name="feedback_contact">为方便沟通，请填写联系方式</string>
	<string name="feedback_send">发送</string>
	<string name="feedback_hint">请在此填写您遇到的问题和现象，或者您希望有什么新功能可以添加，我们会尽快给您反馈</string>
	<string name="feedback_contact_hint">手机号/QQ号/邮箱</string>
	<string name="ask_save">确认保存？</string>
	<string name="exit">退出</string>
	<string name="this_train">本次训练</string>
	<string name="finish_time">时长</string>
	<string name="burning">燃脂</string>
	<string name="burning_train_no_unit">训练量</string>
	<string name="minute">min</string>
	<string name="ge">个</string>
	<string name="minute_cn">分钟</string>
	<string name="kcal_cn">千卡</string>
	<string name="count_number">次数</string>
	<string name="kg_cn">公斤</string>
</resources>