<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/start_login_bg"
    android:orientation="vertical" >

    <include layout="@layout/login_action_bar"
        android:id="@+id/reset_action_bar"/>
    
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/login_item_height"
	    android:layout_marginTop="@dimen/reset_margin_top"
	    android:background="@color/login_num_bg" >
        <ImageView 
            android:id="@+id/login_num_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/login_item_img_margin"
            android:background="@drawable/login_name"/>
	    
        <EditText
            android:id="@+id/rest_num_edit"
            android:layout_toRightOf="@id/login_num_img"
            android:layout_marginLeft="@dimen/login_item_edit_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:hint="@string/enter_phone_num"
            android:background="@color/transparent" />
        
	</RelativeLayout>
	
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/login_item_height"
	    android:layout_marginTop="@dimen/login_item_margin_top"
	    android:background="@color/login_num_bg" >
        <ImageView 
            android:id="@+id/login_verify_code_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/login_item_img_margin"
            android:background="@drawable/login_verification_code"/>
	    
        <Button
            android:id="@+id/btn_reset_get_verfy_code"
            android:layout_width="@dimen/get_verify_code_width"
            android:layout_height="@dimen/get_verify_code_height"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/get_verify_code_margin"
            android:text="@string/get_verificationcode"
            android:textColor="@color/white"
            android:textSize="@dimen/get_verify_code_size"
            android:background="@drawable/bt_get_verify_code_round_corner_rect" />
        <EditText
            android:id="@+id/reset_verfy_edit"
            android:layout_toRightOf="@id/login_verify_code_img"
            android:layout_toLeftOf="@id/btn_reset_get_verfy_code"
            android:layout_marginLeft="@dimen/login_item_edit_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:hint="@string/enter_verificationcode"
            android:background="@color/transparent" />
        
	</RelativeLayout>
	
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/login_item_height"
	    android:layout_marginTop="@dimen/login_item_margin_top"
	    android:background="@color/login_num_bg" >
        <ImageView 
            android:id="@+id/reset_pwd_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/login_item_img_margin"
            android:background="@drawable/login_code"/>
	    
        <EditText
            android:id="@+id/reset_pwd_edit"
            android:layout_toRightOf="@id/reset_pwd_img"
            android:layout_marginLeft="@dimen/login_item_edit_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/enter_new_pwd"
            android:background="@color/transparent" />
        
	</RelativeLayout>

    <Button
        android:id="@+id/btn_reset_finish"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_btn_height"
        android:layout_marginTop="@dimen/reset_btn_margin_top"
        android:layout_marginLeft="@dimen/login_btn_margin_left_right"
        android:layout_marginRight="@dimen/login_btn_margin_left_right"
        android:layout_gravity="center_horizontal"
        android:text="@string/reset_pwd"
        android:textColor="@color/white"
        android:textSize="@dimen/register_finish_text_size"
        android:background="@drawable/bt_login_round_corner_rect" />

</LinearLayout>