<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_course_bg"
    android:orientation="vertical" >
	
    <include layout="@layout/home_actionbar"/>
    
    <RelativeLayout
        android:id="@+id/record_selection_box_layout"
        android:layout_width="@dimen/record_selection_box_width"
        android:layout_height="@dimen/record_selection_box_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/record_time_margin_top"
        android:background="@drawable/record_selection_box" >
        <RelativeLayout
            android:id="@+id/record_selection_which_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </RelativeLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
            <TextView 
                android:id="@+id/record_selection_month"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/month"
                android:textColor="@color/white"
                android:textSize="@dimen/record_selection_box_text_size"/>
            <TextView 
                android:id="@+id/record_selection_year"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/record_selectbox_time_normal"
                android:textSize="@dimen/record_selection_box_text_size"
                android:text="@string/year"/>
            <TextView 
                android:id="@+id/record_selection_total"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/record_selectbox_time_normal"
                android:textSize="@dimen/record_selection_box_text_size"
                android:text="@string/total"/>
        </LinearLayout>
        
    </RelativeLayout>

</LinearLayout>
