<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/start_login_bg" >

    <include layout="@layout/login_action_bar"
        android:id="@+id/login_action_bar"/>
    
    <RelativeLayout
        android:id="@+id/login_bg_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_bg_height"
        android:background="@color/home_bg_color">
        <ImageView 
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/logo_margin_top"
            android:background="@drawable/me_head_pic"/>
    </RelativeLayout>

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/login_item_height"
	    android:background="@color/login_num_bg" >
        <ImageView 
            android:id="@+id/login_num_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/login_item_img_margin"
            android:background="@drawable/login_name"/>
	    
        <EditText
            android:id="@+id/login_num_edit"
            android:layout_toRightOf="@id/login_num_img"
            android:layout_marginLeft="@dimen/login_item_edit_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:hint="@string/enter_phone_num"
            android:background="@color/transparent" />
        
	</RelativeLayout>
	
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/login_item_height"
	    android:layout_marginTop="@dimen/login_item_margin_top"
	    android:background="@color/login_num_bg" >
        <ImageView 
            android:id="@+id/login_pwd_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/login_item_img_margin"
            android:background="@drawable/login_code"/>
	    
        <EditText
            android:id="@+id/login_pwd_edit"
            android:layout_toRightOf="@id/login_pwd_img"
            android:layout_marginLeft="@dimen/login_item_edit_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/enter_pwd"
            android:background="@color/transparent" />
        
	</RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_item_margin_top" >
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/go_register"
            android:textColor="@color/register_text_color"
            android:textSize="@dimen/login_register_text_size"
            android:layout_marginLeft="@dimen/login_register_forgot_pwd_margin_left_right" />

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/fogot_pwd"
            android:textColor="@color/register_text_color"
            android:textSize="@dimen/login_register_text_size"
            android:layout_marginRight="@dimen/login_register_forgot_pwd_margin_left_right" />
    </RelativeLayout>
    
    <Button 
        android:id="@+id/btn_login"
        android:layout_marginTop="@dimen/login_btn_margin_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_btn_height"
        android:layout_marginLeft="@dimen/login_btn_margin_left_right"
        android:layout_marginRight="@dimen/login_btn_margin_left_right"
        android:text="@string/login"
        android:textSize="@dimen/login_text_size"
        android:textColor="@color/white"
        android:background="@drawable/bt_login_round_corner_rect"/>

    <RelativeLayout 
        android:id="@+id/rl_pb_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66FFFFFF"
        android:visibility="gone" >
	    <ProgressBar 
	        android:id="@+id/pb_login"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        style="?android:attr/progressBarStyleLarge" />
    </RelativeLayout>
</LinearLayout>