<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg_color" >
	
    <include layout="@layout/home_actionbar"
        android:id="@+id/bt_device_home_actionbar"/>
    
    <LinearLayout
        android:id="@+id/bt_had_paired_layout"
        android:layout_below="@id/bt_device_home_actionbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bt_had_paired_height"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/bt_had_paired_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/bt_had_paired_text_margin_left"
            android:text="@string/bt_had_paired"
            android:textSize="@dimen/bt_had_paired_text_size"
            android:textColor="@color/bt_had_paired_text_color" />
    </LinearLayout>
    
    <TextView 
        android:id="@+id/bt_device_divider"
        android:layout_below="@+id/bt_had_paired_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/course_divider_1px"
        android:background="@color/divider_1" />
    
    <RelativeLayout
        android:id="@+id/bt_paired_device_layout"
        android:layout_below="@id/bt_device_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bt_paired_device_bg_height"
        android:background="@color/my_course_bg" >
        <TextView
            android:id="@+id/bt_paired_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/bt_had_paired_text_margin_left"
            android:textSize="@dimen/bt_had_paired_text_size"
            android:textColor="@color/bt_had_paired_text_color" />
        
        <TextView
            android:id="@+id/bt_paired_device_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/bt_had_paired_text_margin_left"
            android:text="@string/bt_connected"
            android:textSize="@dimen/bt_paired_device_connect_text_size"
            android:textColor="@color/bt_device_connected_color" />
    </RelativeLayout>
    
    <TextView 
        android:id="@+id/bt_paired_device_divider"
        android:layout_below="@id/bt_paired_device_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/course_divider_1px"
        android:background="@color/divider_bt" />
    
    <ListView
        android:id="@+id/bt_device_listview"
        android:layout_below="@id/bt_paired_device_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
    </ListView>
    
    <Button 
        android:id="@+id/btn_cancel_pair"
        android:layout_below="@id/bt_paired_device_divider"
        android:layout_width="@dimen/bt_cancel_pair_btn_width"
        android:layout_height="@dimen/bt_cancel_pair_btn_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/bt_cancel_pair_btn_margin_top"
        android:text="@string/bt_cancel"
        android:textColor="@color/white"
        android:textSize="@dimen/bt_cancel_pair_text_size"
        android:background="@drawable/bt_unbind_round_corner_rect"/>
    
</RelativeLayout>
